[gd_scene load_steps=5 format=3 uid="uid://b271c57buhqhk"]

[ext_resource type="PackedScene" uid="uid://gmnrfjnd6wf6" path="res://elements/enemy/enemy.tscn" id="1_2sqgt"]
[ext_resource type="Texture2D" uid="uid://de611l20wjce4" path="res://assets/enemy/big_mouth.png" id="2_a2noq"]
[ext_resource type="Script" uid="uid://4085sm6dpavu" path="res://elements/enemy/enemy_big_mouth.gd" id="2_uyx2b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2sqgt"]
size = Vector2(108, 114)

[node name="EnemyBigMouth" instance=ExtResource("1_2sqgt")]
script = ExtResource("2_uyx2b")
id = 2
hp = 200.0
atk = 100.0

[node name="Sprite2D" parent="." index="0"]
position = Vector2(0, -41)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_a2noq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -57)
shape = SubResource("RectangleShape2D_2sqgt")

[node name="TimerCharge" type="Timer" parent="." index="5"]
wait_time = 1.5
one_shot = true

[node name="TimerImpact" type="Timer" parent="." index="6"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TimerCharge" to="." method="_on_timer_charge_timeout"]
[connection signal="timeout" from="TimerImpact" to="." method="_on_timer_impact_timeout"]
